# tinyraytracer

./: CMakeLists.txt  README.md
include/: vector2.hpp  vector3.hpp
samples/basic/: CMakeLists.txt  main.cpp
